add lipsum placeholder text to pages

--- a/demo_page/index.html
+++ b/demo_page/index.html
@@ -65,7 +65,7 @@
         <div class="feature-panel">
           <img src="static/images/feature-1.png" class="feature-img">
           <h4 class="feature-title">DO YOU WANT TO FIND A JOB ?</h4>
-          <p class="feature-desc">It look like readable English. Many desktop publishing packagesand web page editors now use Lorem Ipsum as their default model text</p>
+          <p class="feature-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <button class="feature-btn"><a href="jobs">Find Job</a></button>
         </div>
       </div>
@@ -73,7 +73,7 @@
         <div class="feature-panel">
           <img src="static/images/feature-2.png" class="feature-img">
           <h4 class="feature-title"> ARE YOU LOOKING FOR A CANDIDATE ?</h4>
-          <p class="feature-desc">It look like readable English. Many desktop publishing packagesand web page editors now use Lorem Ipsum as their default model text</p>
+          <p class="feature-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <button class="feature-btn">Find Candidates</button>
         </div>
       </div>
