--- a/index.html
+++ b/index.html
@@ -139,9 +139,7 @@
       <div class="feature-panel">
         <img src="static/images/feature-1.png" class="feature-img">
         <h4 class="feature-title">PREVIEW</h4>
-        <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=7rw4L1qhIr8">
-</iframe>
+        <iframe width="1045" height="588" src="https://www.youtube.com/embed/7rw4L1qhIr8" title="SkillSpider Feature Release" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
   </div>
 </div>
